--- a/css/main.css
+++ b/css/main.css
@@ -192,15 +192,176 @@ footer {
 
 @media only screen and (min-width: 38em) {
 
+  header, main {
+    margin: 0 5rem;
+  }
+
+  .nav-label {
+    right: 4rem;
+  }
+
+/* Sub Nav */
+
   ol {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    gap: .5rem;
+    row-gap: 0;
+  }
+
+  ol li .btn {
+    height: 100%;
+    text-align: center;
+    align-content: center;
+  }
+
+  ol li:nth-child(3) {
+    grid-column: 1 / 1;
+
+  }
+
+  ol li:last-child {
+    grid-column: 3 / -1;
+    grid-row: 1 / -1;
+
+  }
+
+  .hospitalizations {
+    padding: 2rem;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .nav-open,
+  .nav-close {
+    display: none;
+  }
+
+  .nav, .nav a, .nav li {
+    display: inline-block;
+  }
+
+  .nav li {
+    padding: 0 .15rem;
+  }
+
+  .nav {
+    padding: 0;
+  }
+
+  .logo-header {
+    width: 250px;
+    padding: 2rem 0 0;
+  }
+
+  ol {
+    margin: 1rem 10rem;
+  }
+
+  h2 {
+    margin-top: 0;
+  }
+
+  article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
     gap: 1rem;
   }
 
-  ol:last-child {
-    grid-column: 3 / span 3;
+  article .hp-intro {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  article .what-are-opioids {
+    grid-column: 2 / 1;
+    grid-row: 2;
+  }
+
+  article .legal-vs-illegal {
+    grid-column: 2 / 2;
+    grid-row: 2;
+  }
+
+  article .naloxone-img {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+
+  }
+
+  article .escalaing-fentanyl-crisis {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  article .escalaing-fentanyl-crisis-img {
+    grid-column: 2;
+    grid-row: 4;
+  }
+
+  article .hidden-dangers {
+    grid-column: 1;
+    grid-row: 5;
+  }
+
+  article .hidden-dangers-img {
+    grid-column: 2;
+    grid-row: 5;
+  }
+
+  article .hospitalizations {
+    grid-column: 1 / span 2;
+    grid-row: 6;
+    }
+  }
+
+  .hospitalizations {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .hospitalizations .text {
+    grid-column: 1;
+    grid-row: 1 / span 2;
+  }
+
+  .hospitalizations img {
+    grid-column: 2;
+    grid-row: 1 / span 2;
+  }
+
+  .wide-view {
+    display: inline-block;
+  }
+
+  .tall-view {
+    display: none;
+  }
+
+  article .the-cost-of-use {
+    grid-column: 1;
+    grid-row: 7;
+  }
+
+  article .the-cost-of-use-img {
+    grid-column: 1 / span 2;
+    grid-row: 8;
+    margin: 0 10rem;
+  }
+
+  footer img {
+    width: 200px;
+  }
+
+  .footer-content {
+    margin-left: 10rem;
+    max-width: 500px;
   }
 
 }
