--- a/css/intro.css
+++ b/css/intro.css
@@ -101,6 +101,31 @@ th {
 
 @media only screen and (min-width: 60em) {
 
+  ol {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: .5rem;
+    row-gap: 0;
+  }
+
+  ol li .btn {
+    height: 100%;
+    text-align: center;
+    align-content: center;
+  }
+
+  ol li:nth-child(3) {
+    grid-column: 1 / 1;
+
+  }
+
+  ol li:last-child {
+    grid-column: 3 / -1;
+    grid-row: 1 / -1;
+
+  }
+
   article {
     display: grid;
     grid-template-columns: 1fr 1fr;
