--- a/css/algoma.css
+++ b/css/algoma.css
@@ -36,13 +36,10 @@ html {
     align-content: center;
   }
 
-  ol li:nth-child(3) {
-    grid-column: 1 / 1;
-
+  ol li:nth-child(5) {
+    grid-row: span 2;
   }
 
-  ol li:last-child {
-    grid-column: 3 / -1;
-    grid-row: 1 / -1;
-
+  ol li:nth-child(6) {
+    grid-row: span 2;
   }
