--- a/css/algoma.css
+++ b/css/algoma.css
@@ -20,8 +20,70 @@ html {
   text-size-adjust: 100%;
 }
 
+meter::-webkit-meter-bar {
+    background: #FFF;
+    border: 1px solid #CCC;
+    height: 50px;
+    width: 200px;
+    border-radius: 0px;
+}
+
+meter::-webkit-meter-optimum-value {
+    background: #000;
+    background: -moz-linear-gradient(top, #000 0%, #000 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #000), color-stop(100%, #000));
+    background: -webkit-linear-gradient(top, #000 0%, #000 100%);
+    background: -o-linear-gradient(top, #000 0%, #000 100%);
+    background: -ms-linear-gradient(top, #000 0%, #000 100%);
+    background: linear-gradient(to bottom, #000 0%, #000 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000', endColorstr='#000',GradientType=0);
+}
+
+  section {
+    margin: 1rem 3.5rem;
+  }
+
+  .bar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+
+  meter {
+    margin-bottom: 2rem;
+  }
+
 .use-in-algoma-facts {
   font-family: Oswald, sans-serif;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .bar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  section {
+    margin: 2rem 0;
+    overflow: auto;
+  }
+
+  meter {
+    transform: rotate(270deg);
+    grid-row: 1;
+    align-self: flex-end;
+    width: 50px;
+    margin: 0;
+  }
+
+  label {
+    grid-row: 2;
+    padding: 1rem;
+    margin-top: 1rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -46,4 +108,9 @@ html {
 
   ol li:nth-child(6) {
     grid-row: span 2;
+  }
+
+  section {
+    max-width: 48rem;
+    margin: 2rem auto;
   }
