--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
   box-sizing: border-box;
   font-family: "Source Sans Pro", sans-serif;
   line-height: 1.5;
-  color: #2A2F35;
+  color: #2a2f35;
   background-color: #f2f2f2;
 }
 
@@ -47,11 +47,11 @@ img {
 /* Top navigation */
 
 .current {
-  color: #27528B;
+  color: #27528b;
 }
 
 .nav-base {
-  color: #2A2F35;
+  color: #2a2f35;
 }
 
 .nav {
@@ -76,7 +76,7 @@ img {
 }
 
 .nav a:hover {
-  color: #27528B;
+  color: #27528b;
 }
 
 .nav-check {
@@ -138,8 +138,8 @@ ol li {
 .btn {
   display: grid;
   grid-template-columns: 1fr;
-  background-color: #647C8B;
-  border: 1px solid #647C8B;
+  background-color: #647c8b;
+  border: 1px solid #647c8b;
   border-radius: 5px;
   padding: .5rem;
   color: #f2f2f2;
@@ -148,7 +148,7 @@ ol li {
 }
 
 .btn:hover {
-  background-color: #27528B;
+  background-color: #27528b;
 }
 
 /* Figures */
@@ -167,7 +167,7 @@ figcaption {
 /* Footer */
 
 footer {
-  background-color: #DFECF1;
+  background-color: #dfecf1;
   padding: 2rem;
   margin: 0;
 }
@@ -177,7 +177,7 @@ footer {
   text-align: center;
   margin: 0;
   background-color: #f2f2f2;
-  color: #2A2F35;
+  color: #2a2f35;
 }
 
 @media only screen and (min-width: 38em) {
