update footer & acccess

--- a/css/intro.css
+++ b/css/intro.css
@@ -27,7 +27,7 @@ html {
 
 .hospitalizations {
   color: #f2f2f2;
-  background-color: #647C8B;
+  background-color: #2d536b;
   padding: 1rem;
 }
 
@@ -46,7 +46,7 @@ th {
 }
 
 .table-grey {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .canada-wide {
