--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,19 @@ html {
   text-size-adjust: 100%;
 }
 
+.skip-links a {
+  position: absolute;
+  top: -5em;
+}
+
+.skip-links li {
+  list-style: none;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
 body {
   margin: 0;
 }
