--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ footer {
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 1rem;
   border: none;
   outline: none;
   background-color: #2d536b;
