--- a/css/main.css
+++ b/css/main.css
@@ -208,18 +208,20 @@ footer {
   right: 30px;
   z-index: 99;
   font-size: 1rem;
-  border: none;
   outline: none;
-  background-color: #d56b0b;
-  color: #fff;
-  cursor: pointer;
-  padding: .5rem 1rem;
+  background-color: #f2f2f2;
+  color: #d56b0b;
+  border: 3px solid #d56b0b;
   border-radius: 4px;
+  cursor: pointer;
+  padding: .25rem 1rem;
   text-decoration: none;
 }
 
 .mybtn:hover {
-  background-color: #2da729;
+  background-color: #f2f2f2;
+  border: 3px solid #2da729;
+  color: #2da729;
 }
 
 @media only screen and (min-width: 38em) {
