--- a/css/main.css
+++ b/css/main.css
@@ -209,9 +209,9 @@ footer {
   z-index: 99;
   font-size: 1rem;
   outline: none;
-  background-color: #f2f2f2;
-  color: #d56b0b;
-  border: 3px solid #d56b0b;
+  background-color: #323a45;
+  color: #fff;
+  border: 3px solid #323a45;
   border-radius: 4px;
   cursor: pointer;
   padding: .25rem 1rem;
@@ -219,9 +219,9 @@ footer {
 }
 
 .mybtn:hover {
-  background-color: #f2f2f2;
-  border: 3px solid #2da729;
-  color: #2da729;
+  background-color: #2e8540;
+  border: 3px solid #2e8540;
+  color: #fff;
 }
 
 @media only screen and (min-width: 38em) {
